(executables
 (names benchmark_process_packet benchmark_chain
  benchmark_mixer test1 test2 benchmark_fib
  stack_test stack_validation spmc_queue_validate benchmark_time
  scheduler_promises_test test_inject micropools_test benchmark_queue
  benchmark_micropools benchmark_hash benchmark_micropools_bimod 
  benchmark_process_packet_micr)
 (libraries schedulr unix dscheck core oclock micropools 
 datastructures reporting digestif.ocaml digestif checkseum checkseum.ocaml))